--- a/drive/setting.ini
+++ b/drive/setting.ini
@@ -1,18 +1,16 @@
-skin=skin.html
+skin=index.html
 mimeType=text/html
 
 files+=css/style.css
-files+=css/tipped/tipped.css
 
 files+=js/common.js
-files+=js/jquery-1.11.1.min.js
+files+=js/jquery-1.11.2.min.js
 files+=js/sortabletable.js
-files+=js/tipped/tipped.js
 
 i18nfiles+=upload_frame.html
 i18nfiles+=upload_form.html
 
-files+=images/folder.png
 files+=images/folder_link.png
 files+=images/page_white_link.png
-files+=images/favicon.ico
+files+=images/btn_nav.png
+files+=images/btn_prev.png
